Fix z-index

--- a/src/assets/layout/styles/layout/_topbar.scss
+++ b/src/assets/layout/styles/layout/_topbar.scss
@@ -7,7 +7,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 997;
+    z-index: 999;
     @include flex();
     @include flex-align-center();
     @include flex-justify-between();
